# LearnOpenGL-CMake

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
Core/: CMakeLists.txt
Core/include/: Renderer.h
Core/include/OpenGL/: glTexture.h  glVertexArray.h
Core/include/Tests/: TestTexture2D.h
Core/src/: Application.cpp  Renderer.cpp  Shader.cpp
Core/src/OpenGL/: glVertexBuffer.cpp
Core/src/Tests/: Test.cpp  TestClearColor.cpp  TestTexture2D.cpp
Dependencies/: CMakeLists.txt
Dependencies/glad/: CMakeLists.txt
Dependencies/glad/include/glad/: glad.h
Dependencies/glad/src/: glad.c
Dependencies/imgui/: CMakeLists.txt
Dependencies/spdlog/: CMakeLists.txt
Dependencies/stb_image/: CMakeLists.txt
Dependencies/stb_image/stbi/: stb_image.cpp  stb_image.h
LearnOpenGL-Core/: CMakeLists.txt
LearnOpenGL-Core/include/: Camera.h  Renderer.h  Shader.h  pch.hpp
LearnOpenGL-Core/include/Animation/: AnimBlendHelper.hpp  AnimBlendOption.h  AnimTwoBoneIKSolver.hpp  Animation.h  Animator.h  Bone.h
LearnOpenGL-Core/include/Core/: Camera.h  Logger.h  Material.h  Object.h  Renderer.h  UUID.h
LearnOpenGL-Core/include/Geometry/: Mesh.h
LearnOpenGL-Core/include/OpenGL/: glCubeMapTexture.h  glDebug.h  glFrameBuffer.h  glIndexBuffer.h  glShader.h  glShaderStorageBuffer.h  glTexture.h  glVertexArray.h  glVertexBuffer.h  glVertexBufferLayout.hpp
LearnOpenGL-Core/include/Render/: Light.h
LearnOpenGL-Core/include/Render/Feature/: Skybox.h
LearnOpenGL-Core/include/Render/Light/: DirectionalLight.h  Light.h  PointLight.h  SpotLight.h
LearnOpenGL-Core/include/Utils/: AssimpGLMHelper.hpp
LearnOpenGL-Core/src/: Camera.cpp  Logger.cpp  Renderer.cpp  Shader.cpp
LearnOpenGL-Core/src/Animation/: Animation.cpp  Animator.cpp  Bone.cpp
LearnOpenGL-Core/src/Core/: Camera.cpp  Logger.cpp  Material.cpp  Object.cpp  Renderer.cpp  UUID.cpp
LearnOpenGL-Core/src/Geometry/: Mesh.cpp
LearnOpenGL-Core/src/OpenGL/: glCubeMapTexture.cpp  glDebug.cpp  glFrameBuffer.cpp  glIndexBuffer.cpp  glShader.cpp  glShaderStorageBuffer.cpp  glTexture.cpp  glVertexArray.cpp  glVertexBuffer.cpp
LearnOpenGL-Core/src/Render/: Light.cpp
LearnOpenGL-Core/src/Render/Feature/: Skybox.cpp
LearnOpenGL-Core/src/Render/Light/: DirectionalLight.cpp  Light.cpp  PointLight.cpp  SpotLight.cpp
LearnOpenGL-Tests/: CMakeLists.txt
LearnOpenGL-Tests/include/Test/: MyTests.h  Test.h  TestBlinnPhong.h  TestBloom.h  TestCamera.h  TestClearColor.h  TestDeferredRendering.h  TestEnvMapping.h  TestFrameBuffer.h  TestHDR.h  TestImgBlend.h  TestMultipleLights.h  TestNormalMapping.h  TestPBR.h  TestSSAO.h  TestShadowMap.h  TestTexture2D.h
LearnOpenGL-Tests/include/Test/animation/: TestAnimation.h
LearnOpenGL-Tests/include/Test/base/: Test.h  TestMenu.h
LearnOpenGL-Tests/src/: Application.cpp
LearnOpenGL-Tests/src/Test/: Test.cpp  TestBlinnPhong.cpp  TestBloom.cpp  TestCamera.cpp  TestClearColor.cpp  TestDeferredRendering.cpp  TestEnvMapping.cpp  TestFrameBuffer.cpp  TestHDR.cpp  TestImgBlend.cpp  TestMultipleLights.cpp  TestNormalMapping.cpp  TestPBR.cpp  TestSSAO.cpp  TestShadowMap.cpp  TestTexture2D.cpp
LearnOpenGL-Tests/src/Test/animation/: TestAnimation.cpp
LearnOpenGL-Tests/src/Test/base/: TestMenu.cpp
Res/Models/Simple/: Axis.mtl
Res/Models/bocchi/: 1.mtl  boqi.vrm
Res/Models/mutsmi/: mutsmi v1.mtl  读我.txt
Res/Shaders/: TestTexture2D.frag
Res/Shaders/CustomModel/: model.frag  model.vert
Res/Shaders/CustomModel/Animation/: model.vert
Res/Shaders/CustomModel/Axis/: axis.frag
Res/Shaders/DebugTexture/: debugTex.frag  debugTex.vert
Res/Shaders/Light/: light.frag  light.vert
Res/Shaders/ShadowMap/: shadowmap.vert
Res/Shaders/Skybox/: skybox.frag  skybox.vert
Res/Shaders/TestBlinnPhong/: object.frag  object.vert
Res/Shaders/TestBloom/: blur.frag  object.frag  screenQuad.frag
Res/Shaders/TestCamera/: shader.frag
Res/Shaders/TestDR/: gbObj.frag  gbObj.vert  scrQuad.frag
Res/Shaders/TestEnvMapping/: model.frag  object.frag  object.vert
Res/Shaders/TestFrameBuffer/: quad.frag  quad.vert
Res/Shaders/TestHDR/: HDR.frag
Res/Shaders/TestImgBlend/: resultColor.frag  resultColor.vert
Res/Shaders/TestMultipleLights/: object.frag
Res/Shaders/TestNormalMapping/: brick.frag  brick.vert
Res/Shaders/TestPBR/: PBRobj.frag  PBRobj.vert
Res/Shaders/TestSSAO/: gbObj.vert  scrLighting.frag  scrSsao.frag  scrSsaoBlur.frag
Res/Shaders/TestShadowMap/: ground.frag  ground.vert
Res/Shaders/TestTexture2D/: shader.vert
proj/: CMakeLists.txt
proj/include/: Logger.h  Renderer.h  Shader.h  pch.hpp
proj/include/OpenGL/: glDebug.h  glIndexBuffer.h  glTexture.h  glVertexArray.h  glVertexBuffer.h  glVertexBufferLayout.hpp
proj/include/Tests/: Test.h  TestClearColor.h
proj/res/Shaders/: test.shader
proj/src/: Application.cpp  Logger.cpp  Renderer.cpp  Shader.cpp  main.cpp
proj/src/OpenGL/: glDebug.cpp  glTexture.cpp  glVertexArray.cpp
